# qwen-decoder

./: .gitignore  CMakeLists.txt  README.md  bench.lua  benchlong.sh  benchmark.sh  common.cpp  common.h  cpu_decoder.cpp  cpu_decoder.h  cpu_main.cpp  decode_main.cu  decoder.cpp  decoder.h  gguf_loader.cpp  gguf_loader.h  gpu_decoder.cu  gpu_decoder.h  gpu_kernels.cu  gpu_kernels.h  gpu_main.cpp  gpu_main.cu  inference_server.cu  kv_cache.cpp  kv_cache.h  loader.py  main.cpp  paged_kv_cache.cpp  paged_kv_cache.h  prefill_main.cu  prefix_cache.cpp  prefix_cache.h  scheduler.cpp  scheduler.h  tp_main.cu
gpu_v1/: gpu_decoder.cu  gpu_decoder.h
gpu_v10/: gpu_decoder.cu  gpu_decoder.h
gpu_v11/: decode_main.cu  gpu_decoder.cu  pd_comm.cpp  pd_comm.h  prefill_main.cu
gpu_v12/: decode_main.cu  filter.py  gpu_decoder.cu  main.cu  pd_comm.cpp  prefill_main.cu  tmp.cu
gpu_v13/: decode_main.cu  filter.py  pd_comm.cpp  pd_comm.h  prefill_main.cu  tmp.cu
gpu_v14/: decode_main.cu  pd_comm.cpp  pd_comm.h  prefill_main.cu
gpu_v15/: bench.lua  decode_main.cu  gpu_decoder.h  main.cu  pd_comm.cpp  pd_comm.h  prefill_main.cu
gpu_v2/: gpu_decoder.cu  gpu_decoder.h
gpu_v3/: gpu_decoder.cu  gpu_decoder.h
gpu_v4/: gpu_decoder.cu  gpu_decoder.h
gpu_v5/: gpu_decoder.cu  gpu_decoder.h
gpu_v7/: gpu_decoder.cu  gpu_decoder.h
gpu_v8/: gpu_decoder.cu  gpu_decoder.h
gpu_v9/: gpu_decoder.cu  gpu_decoder.h
proto/: pd_service.proto
tests/attention/: README.md  attention_cpu.cpp  attention_gpu.cu  attention_numpy.py
tests/cut_tensor/: cut.cu  cut.py
tests/nccl/: allreduce_test  allreduce_test.cu
tests/softmax/: README.md  softmax_cpu.cpp  softmax_gpu.cu  softmax_numpy.py  softmax_torch.py
